--- a/scrollviewwithpopwindow/src/main/res/layout/activity_main.xml
+++ b/scrollviewwithpopwindow/src/main/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/scrollView"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello Worldaaaaaa!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:layout_gravity="center"
+            android:layout_marginTop="500px"
+            android:background="#000"
+            android:gravity="center"
+            android:text="A"
+            android:textColor="#fff" />
+
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="2200px"
+            android:layout_gravity="center"
+            android:background="#00f" />
+    </LinearLayout>
+
+</ScrollView>
