半径大小确定：View/2-背景圆与View边缘的距离

--- a/progressviewwithcircle/src/main/res/layout/activity_main.xml
+++ b/progressviewwithcircle/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="@dimen/px_to_dip_230"
         app:backCircleColor="@color/RGB_E6E9ED"
         app:backCircleWidth="@dimen/px_to_dip_8"
+        app:edgeDistance="@dimen/px_to_dip_20"
         app:endCircleColor="@color/RGB_FF8209"
         app:endCircleWidth="@dimen/px_to_dip_24"
         app:numTextColor="@color/RGB_FF8209"
@@ -39,6 +40,7 @@
         android:layout_marginTop="@dimen/px_to_dip_20"
         app:backCircleColor="@color/RGB_E6E9ED"
         app:backCircleWidth="@dimen/px_to_dip_8"
+        app:edgeDistance="@dimen/px_to_dip_20"
         app:endCircleColor="@color/RGB_4FC1E9"
         app:endCircleWidth="@dimen/px_to_dip_24"
         app:numTextColor="@color/RGB_4FC1E9"
