--- a/progressviewwithcircle/src/main/res/values/attrs.xml
+++ b/progressviewwithcircle/src/main/res/values/attrs.xml
@@ -21,5 +21,7 @@
 
         <attr name="endCircleWidth" format="dimension" />
         <attr name="endCircleColor" format="color" />
+
+        <attr name="edgeDistance" format="dimension" />
     </declare-styleable>
 </resources>
